# HONS-project

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.node  README.md  docker-compose-1000-1.yml  docker-compose-1000-10.yml  docker-compose-10000-1.yml  docker-compose-10000-10.yml  docker-compose-debugger.yml  docker-compose-static.yml  docker-compose.yml  paxos.conf  zlog.conf
cmake/: FindLIBEVENT.cmake  FindZLOG.cmake
experiments_scripts/adaptive_timeout/: adaptive_timeout_metrics.py  adaptive_timeout_parser_normal_behaviour.py
experiments_scripts/consensus_experiment/: experiment_2_consensus_evaluation.sh  paxos_consensus_time_parser_lan.py  paxos_consensus_time_parser_local.py  paxos_lan.csv  paxos_local.csv
experiments_scripts/experiment_1/: experiment_1_multiple_containers_fast.json  experiment_1_multiple_containers_fast.sh  experiment_1_multiple_containers_slow.sh  experiment_1_single_container_fast.sh
experiments_scripts/formal_validation/: experiment_1_single_container_slow.sh
logs/adaptive_timeout/normal_behaviour/local/static/: README.md
logs/pumba_logs/: experiment_1_multiple_containers_slow.json  experiment_1_single_container_fast.json  experiment_1_single_container_slow.json  pumba_log_10nodes_1_fail.json  pumba_log_10nodes_3_fail.json  pumba_log_10nodes_5_fail.json  pumba_network_delay_steady.json
paper/: bibliography.bib  failure_detector.tex  notes.md  report-blx.bib  report.aux  report.blg  report.fdb_latexmk  report.fls  report.out  report.run.xml  report.synctex(busy)  report.tex  report.toc
src/: adaptive_delay_model.c  adaptive_delay_model.h  client  client.c  failure_detector_main.c  heartbeatClient.c  heartbeatServer.c  orchestrator  paxos_replica.c  paxos_replica.h  proposer_timeout.c  testOrchestrator  testOrchestrator.c  test_orchestrator.c  timer.c  timer.h  tpl.c  udpClient  udpServer  utils.c  utils.h  zlog.conf
src/include/: adaptive_delay_model.h  paxos_replica.h  time_rdtsc.h  timer.h  uthash.h  utils.h
